# DupIm

./: .gitignore  CMakeLists.txt  README.md  makefile
source/: main.cpp
src/: main.cpp  submain.cpp
src/include/: sisIO.hpp
